--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,9 @@
     </head>
     {#---------------------------------------BODY-------------------------------------------#}
     <body>
+    {% block body %}
+
+    {% endblock %}
     </body>
     {#----------------------------------------JS--------------------------------------------#}
     {% block javascripts %}
