print all videos in index

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -14,6 +14,9 @@
     This friendly message is coming from:
     <ul>
         COUCOU C'EST LE PREMIER CONTROLLER LOL
+        {% for video in all_videos %}
+            {{ video.nb_likes }}
+        {% endfor %}
         <li>Your controller at <code><a href="{{ 'C:/Users/Proprietaire/Documents/E4FI/Projet_fin_annee_YT/YouTube-Catalogue/src/Controller/MainController.php'|file_link(0) }}">src/Controller/MainController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'C:/Users/Proprietaire/Documents/E4FI/Projet_fin_annee_YT/YouTube-Catalogue/templates/main/index.html.twig'|file_link(0) }}">templates/main/index.html.twig</a></code></li>
     </ul>
