--- a/assets/styles/menu.css
+++ b/assets/styles/menu.css
@@ -15,6 +15,7 @@
     border-radius: 0 27.5rem 27.5rem 0 !important;
     margin: 0 !important;
 }
+
 /*Modal components*/
 
 .modal-container-border{
@@ -22,7 +23,7 @@
     border-radius: 30px;
 }
 
-.modal-boutton-CSV{
+.modal-btn-CSV{
     border-radius: 13px;
 }
 
@@ -33,6 +34,28 @@
 .modal-center{
     margin: 16.75rem auto;
 }
-.csv-icon{
-    font-family: Helvetica, Arial, sans-serif;
+
+.inputfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+.inputfile + label {
+    font-size: 1.25em;
+    font-weight: 700;
+    color: white;
+    display: inline-block;
+    cursor: pointer; /* "hand" cursor */
+
+}
+
+
+
+.inputfile:focus + label {
+	outline: 1px dotted #000;
+	outline: -webkit-focus-ring-color auto 5px;
 }
