--- a/assets/styles/menu.css
+++ b/assets/styles/menu.css
@@ -1,11 +1,8 @@
-.input-center {
-    margin-top: 20%;
-}
-
-.center{
+.center {
     margin: auto;
     width: 50%;
 }
+
 .border-radius-input {
     border-radius: 27.5rem 0 0 27.5rem !important;
     margin: 0 !important;
@@ -16,46 +13,45 @@
     margin: 0 !important;
 }
 
+
 /*Modal components*/
 
-.modal-container-border{
+.modal-container-border {
     border: groove black;
     border-radius: 30px;
 }
 
-.modal-btn-CSV{
+.modal-btn-CSV {
     border-radius: 13px;
 }
 
-.modal-rounded{
+.modal-rounded {
     border-radius: 20px !important;
 }
 
-.modal-center{
+.modal-center {
     margin: 16.75rem auto;
 }
 
 .inputfile {
-	width: 0.1px;
-	height: 0.1px;
-	opacity: 0;
-	overflow: hidden;
-	position: absolute;
-	z-index: -1;
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
 }
 
-.inputfile + label {
+.inputfile+label {
     font-size: 1.25em;
     font-weight: 700;
     color: white;
     display: inline-block;
-    cursor: pointer; /* "hand" cursor */
-
+    cursor: pointer;
+    /* "hand" cursor */
 }
 
-
-
-.inputfile:focus + label {
-	outline: 1px dotted #000;
-	outline: -webkit-focus-ring-color auto 5px;
+.inputfile:focus+label {
+    outline: 1px dotted #000;
+    outline: -webkit-focus-ring-color auto 5px;
 }
