--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -8,80 +8,107 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
-<div class="container" style="background-color:white">
-    <div class="row g-3">
-        <div class="col-sm-7 col-md-2">
-            <label for="url" class="form-label">URL</label>
-            <input type="text" class="form-control" id="url" placeholder="UrlVideo" aria-label="URL Video">
-        </div>
-        <div class="col-sm col-md-2">
-            <label for="category" class="form-label">Category</label>
-            <select class="form-select" id="category" aria-label="Category">
-                <option selected>Choose a category</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-            </select>
-        </div>
-        <div class="col-sm col-md-2">
-            <label for="tags" class="form-label">Tags</label>
-            <select class="form-select" id="tags" aria-label="Tags">
-                <option selected>Choose tags</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-            </select>
-        </div>
-    </div>
+<div class="container-main">
+    <h3>FILTRES</h3>
+    <div class="under_title"></div>
 
-    <div class="row g-5">
-        <div class="col-sm-7 col-md-2">
-            <label for="likes" class="form-label">Likes</label>
-            <input type="text" class="form-control" id="likes" placeholder="Nb Min" aria-label="Min">
-            <input type="text" class="form-control"  placeholder="Nb Max" aria-label="Max">
+    <form action="">
+    <div class="container-input">
+        <div class="row justify-content-between">
+            <div class="col-sm-7 col-md-7">
+                <label for="url" class="form-label">URL</label>
+                <input type="text" class="form-control" id="url" placeholder="UrlVideo" aria-label="URL Video">
+            </div>
+            <div class="col-sm col-md-3">
+                <label for="category" class="form-label">Category</label>
+                <select class="form-select" id="category" aria-label="Category">
+                    <option selected>Choose a category</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+            </div>
+            <div class="col-sm col-md-2">
+                <label for="tags" class="form-label">Tags</label>
+                <select class="form-select" id="tags" aria-label="Tags">
+                    <option selected>Choose tags</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+            </div>
         </div>
 
-        <div class="col-sm-7 col-md-2">
-            <label for="views" class="form-label">Nb vus</label>
-            <input type="text" class="form-control" id="views" placeholder="Nb Min" aria-label="Min">
-            <input type="text" class="form-control" placeholder="Nb Max" aria-label="Max">
+        <div class="row justify-content-between">
+            <div class="col-sm-7 col-md-3">
+                <label for="likes" class="form-label">Likes</label>
+                <div class="double-input col-md-12">
+                    <input type="text" class="form-control" id="likes_min" placeholder="Nb Min" aria-label="Min">
+                    <p class="inter-input">à</p>
+                    <input type="text" class="form-control" id="likes_max" placeholder="Nb Max" aria-label="Max">
+                </div>
+            </div>
+
+            <div class="col-sm-7 col-md-3">
+                <label for="views" class="form-label">Nb vus</label>
+                <div class="double-input col-md-12">
+                    <input type="text" class="form-control" id="views" placeholder="Nb Min" aria-label="Min">
+                    <p class="inter-input">à</p>
+                    <input type="text" class="form-control" placeholder="Nb Max" aria-label="Max">
+                </div>
+            </div>
+
+            <div class="col-sm-7 col-md-5">
+                <label for="upload_date" class="form-label">Date d'upload</label>
+                <div class="double-input col-md-12" id="upload_date" data-provide="datepicker">
+                    <input type="date" class="form-control" aria-label="Date début">
+                    <p class="inter-input">à</p>
+                    <input type="date" class="form-control" aria-label="Date fin">
+                    {#                        <div class="input-group-addon">#}
+                    {#                            <span class="glyphicon glyphicon-th"></span>#}
+                    {#                        </div>#}
+                </div>
+            </div>
         </div>
-        
-        <div class="col-sm-7 col-md-2">
-            <label for="upload_date" class="form-label">Date d'upload</label>
-            <div class="input-group date" id="upload_date" data-provide="datepicker">
-                <input type="text" class="form-control">
-                <div class="input-group-addon">
-                    <span class="glyphicon glyphicon-th"></span>
+
+        <div class="row justify-content-between">
+            <div class="col-sm-7 col-md-3">
+                <label for="dislikes" class="form-label">Dislikes</label>
+                <div class="double-input col-md-12">
+                    <input type="text" class="form-control" id="dislikes" placeholder="Nb Min" aria-label="Min">
+                    <p class="inter-input">à</p>
+                    <input type="text" class="form-control"  placeholder="Nb Max" aria-label="Max">
+                </div>
+            </div>
+
+            <div class="col-sm-7 col-md-3">
+                <label for="time" class="form-label">Durée</label>
+                <div class="double-input col-md-12">
+                    <input type="text" class="form-control" id="time" placeholder="Nb Min" aria-label="Min">
+                    <p class="inter-input">à</p>
+                    <input type="text" class="form-control" placeholder="Nb Max" aria-label="Max">
+                </div>
+            </div>
+            <div class="col-sm-7 col-md-5">
+                <label for="flexSwitchCheckDefault" class="form-label">Sous-Titres</label>
+                <div class="col-md-12 form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="row g-4">
-        <div class="col-sm-7 col-md-2">
-            <label for="dislikes" class="form-label">Dislikes</label>
-            <input type="text" class="form-control" id="dislikes" placeholder="Nb Min" aria-label="Min">
-            <input type="text" class="form-control"  placeholder="Nb Max" aria-label="Max">
+        <div class="row">
+            <div class="col-sm-7 col-md-12" style="text-align: end">
+                <button type="button" class="btn btn-danger button">Rechercher</button>
+            </div>
         </div>
 
-        <div class="col-sm-7 col-md-2">
-            <label for="time" class="form-label">Durée</label>
-            <input type="text" class="form-control" id="time" placeholder="Nb Min" aria-label="Min">
-            <input type="text" class="form-control" placeholder="Nb Max" aria-label="Max">
-        </div>
-        <div class="col-sm-7 col-md-2 form-check form-switch">
-            <label for="switch" class="form-label">Sous-Titres</label>
-            <input class="form-check-input" id="label" type="checkbox" id="flexSwitchCheckDefault">
-        </div>
-    </div>
 
-    <div class="row g-5">
-        <div class"col-sm-7 col-md-2 justify-content-md-end">
-            <button type="button" class="btn btn-danger button">Rechercher</button>
-        </div>
-    </div>
-    
-    
-</div>
-{% endblock %}
+    </form>
+    {% endblock %}
+
+    {% block stylesheets %}
+        {{ parent() }}
+        {{ encore_entry_link_tags('search') }}
+    {% endblock %}
