--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -10,22 +10,21 @@
             <div class="modal-content modal-rounded p-2">
                 <div class="modal-body">
                     <div class="modal-container-border text-center">      
-                        <div id="to_replace">
+                        <div id="before-submit-div" name="before-submit-div" >
                             <p>Drag your CSV File here</p>
                             <i class="h1 bi bi-filetype-csv"></i>
                             <p class="h3">--------- OR ---------</p>
                         </div>
+                        
                             {{ form_start(CSVform) }}
-                                <i id="logo-csv-post-submit" class="pt-3 h1 bi bi-filetype-csv logo-csv-post-submit"></i>
-                                <label for="import_csv_CSV_file" class="btn btn-danger modal-btn-CSV ">Choose a file</label>
-                                <div class="modal-post-submit modal-post-submit-hidden" id="post-submit-div">
-                                    {{ form_widget(CSVform.CSV_file, {'attr': {'class': 'inputfile'}}) }}
-
+                                <i id="after-submit-logo" class="d-none pt-3 h1 bi bi-filetype-csv"></i>
+                                <label for="import_csv_CSV_file" class="btn btn-danger modal-btn-CSV ">Browse files</label>
                                     {{ form_widget(CSVform.reset) }}
-                                    {{ form_widget(CSVform.button) }}
-                                </div>
+                                    <div class="d-flex flex-row justify-content-center align-items-center">
+                                    {{ form_widget(CSVform.CSV_file, {'attr': {'class': 'inputfile'}}) }}
+                                    {{ form_widget(CSVform.submit) }}
+                                    </div>
                             {{ form_end(CSVform) }}
-
                     </div>
                 </div>
             </div>
