--- a/assets/styles/search.css
+++ b/assets/styles/search.css
@@ -1,9 +1,4 @@
-body{
-    font-family: Montserrat;
-    font-style: normal;
-}
-
-.container-main{
+.container-main {
     background-color: white;
     padding: 2%;
     width: 80%;
@@ -11,24 +6,24 @@ body{
     margin: 0 auto;
 }
 
-h3{
+h3 {
     font-style: normal!important;
     letter-spacing: 3px;
 }
 
-.under_title{
+.under_title {
     width: 70px;
     height: 2px;
     background-color: #EE4145;
     margin-top: -8px;
 }
 
-.container-input{
+.container-input {
     margin-top: 2%;
     /*border: solid red 1px;*/
 }
 
-.container-input .row{
+.container-input .row {
     margin-bottom: 2.5%;
 }
 
@@ -36,23 +31,48 @@ h3{
     display: flex;
 }
 
-.inter-input{
+.inter-input {
     margin: 3%;
 }
 
-.form-check-input{
+.form-check-input {
     border: solid #ced4da 1px;
     padding: 2%;
     width: 12%!important;
     height: 25px;
 }
 
-.form-check-input:active, .form-check-input:checked{
+.form-check-input:active,
+.form-check-input:checked {
     background-color: red;
     border: solid #EE4145;
 }
 
-.button{
-    width: 20%;
+.button {
     margin-top: 1%;
+}
+
+.container-button .button {
+    margin-top: 20%;
+}
+
+#search-btn {
+    width: 20%;
+}
+
+.container-videos {
+    background-color: black;
+    padding: 2%;
+    width: 80%;
+    border-radius: 30px;
+    border-color: black;
+    margin: 0 auto;
+}
+
+.container-table {
+    padding: 10px;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: #e5e5e5;
+    text-align: center;
 }
