--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -146,7 +146,7 @@
                             </div>
                         </th>
                         <td>
-                            <img src="Images/thumbnail.png" alt="Bootstrap" class="img-thumbnail">
+                            <img src="templates\search\thumbnail.png" alt="Bootstrap" class="img-thumbnail">
                         </td>
                         <td>
                             Titre de la vidéo<br/>
