Debut modal tags

--- a/assets/styles/search.css
+++ b/assets/styles/search.css
@@ -76,3 +76,39 @@ h3 {
     background-color: #e5e5e5;
     text-align: center;
 }
+
+.modal-tag{
+    background-color: rgb(32, 33, 49);
+}
+
+.modal-rounded {
+    border-radius: 20px !important;
+    min-height: 12rem;
+}
+
+.tag-container {
+    padding: 20px 10px 20px 10px;
+    margin: 0 !important;
+}
+.form-container {
+    padding: 20px 10px;
+}
+
+.tag-user-containerr, .tag-video-container, .tag-recap-container{
+    padding-left: 0 !important;
+}
+
+
+.tag-user, .tag-video, .tag-recap{
+    background-color: white;
+    border-radius: 25px;
+    height: 100%;
+}
+
+.tag{
+    border: #EE4145 solid 1px;
+    border-radius: 20px;
+    background-color: #cf171a;
+    color: white;
+    font-weight: 300;
+}
