--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -121,8 +121,78 @@
                 </div>
             </div>
 
+        <!-- Modal -->
+            <div class="modal fade" id="tagsModal" tabindex="-1" aria-labelledby="tagsModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg modal-center">
+                    <div class="modal-content modal-rounded p-2 modal-tag">
+                        <div class="modal-body">
+                            <div class="modal-container-border text-center">
+                                <div class="row form-container">
+                                    <div class="col-10">
+                                        <input type="text" class="form-control" id="search-tag" placeholder="Search tags" aria-label="Search tags"/>
+                                    </div>
+                                    <div class="col-2">
+                                        <button type="submit" class="btn btn-danger" id="search-tag-btn">Rechercher</button>
+                                    </div>
+                                </div>
+                                <div class="col-12 tag-container row">
+                                    <div class="col-5">
+                                        <div class="tag-user">
+                                            <div class="tag-user-title">
+                                                Tags User   
+                                            </div>
+                                            <div class="tag-user-tags row">
+                                                {% for i in 0..5 %}
+                                                    <div class="col-4">
+                                                        <div class="tag m-1 ">
+                                                            tag U.{{i}}
+                                                        </div>
+                                                    </div>
+                                                {% endfor %}
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-5 tag-video-contaier">
+                                        <div class="tag-video">
+                                            <div class="tag-video-title">
+                                                Tags Video   
+                                            </div>
+                                            <div class="tag-video-tags row">
+                                                {% for i in 0..4 %}
+                                                    <div class="col-4">
+                                                        <div class="tag m-1 ">
+                                                            tag V.{{i}}
+                                                        </div>
+                                                    </div>
+                                                {% endfor %}   
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-2 tag-video-contaier">
+                                        <div class="tag-recap">
+                                            <div class="tag-recap-title">
+                                                Recap   
+                                            </div>
+                                            <div class="tag-recap-tags row">
+                                                {% for i in 0..4 %}
+                                                    <div class="col-12">
+                                                        <div class="tag m-2">
+                                                            tag {{i}}
+                                                        </div>
+                                                    </div>
+                                                {% endfor %}   
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="col-sm-7 col-md-3" >
-                <button type="button" class="btn btn-danger button">Ajouter tags</button>
+                <a class="text-light btn btn-danger" type="button" data-bs-toggle="modal" data-bs-target="#tagsModal"><u>Ajouter tags</u></a>
             </div>
 
             <div class="col-sm-7 col-md-3" >
@@ -192,7 +262,7 @@
                             </div>
                         </th>
                         <td>
-                            <img src="Images/thumbnail.png" alt="Bootstrap" class="img-thumbnail">
+                            <img src="{{ asset('images\logo.png') }}" class="img-thumbnail">
                         </td>
                         <td>
                             Titre de la vidéo<br/>
